--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Wayne's Corner
+title: Wayne82
 email: wynw82@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is my personal blog where I share my thoughts and experiences.
+  Be humble, be curious — the path to discovering the world and oneself.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wayne82.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: 
