enable google analytics.

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ plugins:
   - jekyll-remote-theme
 
 show_excerpts: true
+google_analytics: G-7QQBEZL21K
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
