--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wayne82.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: 
 github_username: wayne82
+author: Wayne Wang
 
 # Build settings
 # theme: minima
