--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Wayne82
-email: wynw82@gmail.com
+title: Wayne's Corner
 description: >- # this means to ignore newlines until "baseurl:"
   Be humble, be curious — the path to discovering the world and oneself.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wayne82.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: 
 github_username: wayne82
-author: Wayne Wang
+author:
+  name: Wayne Wang
+  email: wynw82@gmail.com
 
 # Build settings
 # theme: minima
