--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,12 @@ plugins:
 
 show_excerpts: true
 google_analytics: G-7QQBEZL21K
+
+minima:
+  social_links:
+    - title: Wayne's Github
+      icon: github
+      url: https://github.com/Wayne82
+    - title: Wayne's LinkedIn
+      icon: linkedin
+      url: https://www.linkedin.com/in/wayne82
