--- a/_data/galleries/paintings.yml
+++ b/_data/galleries/paintings.yml
@@ -1,8 +1,8 @@
-path: "/assets/galleries/paintings"
+path: "/assets/galleries/paintings/"
 cover_image: 0
 images:
   - name: "robot-chef.jpg"
-    thumb: "robot-chef.jpg"
+    thumb: "robot-chef-thumb.jpg"
     width: 1280
     height: 1949
-    alt: "A robot chef preparing a meal in a futuristic kitchen."
+    alt: "Robot Chef"
