exclude scripts and makefile from copying to the final site.

--- a/_config.yml
+++ b/_config.yml
@@ -34,3 +34,7 @@ minima:
     - title: Wayne's LinkedIn
       icon: linkedin
       url: https://www.linkedin.com/in/wayne82
+
+exclude:
+  - scripts
+  - Makefile
