--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-
 title: Wayne's Corner
 description: >- # this means to ignore newlines until "baseurl:"
   Be humble, be curious — the path to discovering the world and oneself.
@@ -12,6 +11,8 @@ author:
 # User remote theme minima on Github
 remote_theme: jekyll/minima@ded17a1
 plugins:
+  - jekyll-sitemap
+  - jekyll-seo-tag
   - jekyll-feed
   - jekyll-remote-theme
 
